--- a/config.env
+++ b/config.env
@@ -1,49 +1,42 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# RECOMMNED SETUP 
-## Setup only Required Config & DATABASE_URL
-## Rest of variable can be setup using BOT by /bsetting command
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "6072002034:AAHLOorUJf35wGpH-8_bagOISy2y9XcbumY"
+OWNER_ID = "1838706377"
+TELEGRAM_API = "5746422"
+TELEGRAM_HASH = "ea32b231169b141b67a11f3078533e2f"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "1WB0VnBOTvq7NBIqHy0fg5CFGDWTIYiJM"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
-USE_SERVICE_ACCOUNTS = ""
+DATABASE_URL = "mongodb+srv://samaypatel19:<password>@sam.yd8dmnf.mongodb.net/?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001227084967"
+SUDO_USERS = "1838706377"
+IGNORE_PENDING_REQUESTS = "True"
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "True"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
+INDEX_URL = "https://luffy.samaypatel199024.workers.dev/0:"                                        # Not end with /
 STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
-STOP_DUPLICATE = ""
-CMD_SUFFIX = ""
+STOP_DUPLICATE = "True"
+CMD_SUFFIX = "1"
 UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "1200"
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
 
 # TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-QB_MIRROR_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-ANILIST_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WAYBACK_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MEDIAINFO_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+LEECH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+QB_MIRROR_ENABLED = "True"                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+ANILIST_ENABLED = "True"                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WAYBACK_ENABLED = "True"                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MEDIAINFO_ENABLED = "True"                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+SET_BOT_COMMANDS = "True" 
 
 # UPDATE
 UPSTREAM_REPO = ""
@@ -54,20 +47,20 @@ UPDATE_PACKAGES = "False"
 SAFE_MODE = ""                                        # If this true file name will hide from status message and BOT_PM, FORCE_BOT_PM will enable automatically. Default is False.
 
 # PM SUPPORT
-BOT_PM = ""                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
-FORCE_BOT_PM = ""                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
+BOT_PM = "True"                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
+FORCE_BOT_PM = "True"                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
 
 # LEECH
-LEECH_LOG = ""                                        # Must be Started with -100xxxxxxx
-LEECH_LOG_URL = ""                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
-LEECH_LOG_INDEXING = ""                               # Default is False make it True if you want leech file indexing in leech log channel
+LEECH_LOG = "-1001985553436"                                        # Must be Started with -100xxxxxxx
+LEECH_LOG_URL = "https://t.me/+B5QW4m1PAaZlNzJl"                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
+LEECH_LOG_INDEXING = "True"                               # Default is False make it True if you want leech file indexing in leech log channel
 LEECH_CAPTION = ""                                    # Add caption in leech file
 
 # MIRROR
-ENABLE_USR_TD = ""                                    # If this TRUE then User can create its own TD Category
-MIRROR_LOGS = ""                                      # Must be Started with -100xxxxxxx
-MIRROR_LOG_URL = ""                                   # Use Invite link for PUBLIC/PRIVATE Mirror log 
-LINK_LOGS = ""                                        # Must be Started with -100xxxxxxx
+ENABLE_USR_TD = "True"                                    # If this TRUE then User can create its own TD Category
+MIRROR_LOGS = "-1001985553436"                                      # Must be Started with -100xxxxxxx
+MIRROR_LOG_URL = "https://t.me/+B5QW4m1PAaZlNzJl"                                   # Use Invite link for PUBLIC/PRIVATE Mirror log 
+LINK_LOGS = "-1001985553436"                                        # Must be Started with -100xxxxxxx
 
 # OTHERS UTILS
 TG_SPLIT_SIZE = ""                                    # Each User can set its own using usetting
@@ -87,9 +80,9 @@ FSUB_IDS = ""                                         # Each id Should be sepera
 
 # QBITORRENT
 BASE_URL = ""
-SERVER_PORT = ""
+SERVER_PORT = "22"
 WEB_PINCODE = ""
-QB_SEED = ""
+QB_SEED = "False"
 
 # QUEUE SYSTEM                                         NOTE: if you want to fill QUEUE_DOWNLOAD or QUEUE_UPLOAD, then QUEUE_ALL value must be greater than or equal to the greatest one and less than or equal to summation of QUEUE_UPLOAD and QUEUE_DOWNLOAD
 QUEUE_ALL = ""                                        # Number(int) of parallel tasks of downloads from (mega, telegram, yt-dlp, gdrive) + all uploads
@@ -124,9 +117,9 @@ laravel_session = ""                                  # laravel_session for SHAR
 
 # BOT LIMITS
 TOTAL_TASKS_LIMIT = ""                                # Limit Total Max Task At a time (int value)
-USER_TASKS_LIMIT = ""                                 # Limit User Max Task At a time (int value)
+USER_TASKS_LIMIT = "5"                                 # Limit User Max Task At a time (int value)
 DAILY_TASK_LIMIT = ""                                 # Max task a user can do in one day (int value)
-STORAGE_THRESHOLD = ""                                # Free Space that must be left in bot (int value without GB/MB)
+STORAGE_THRESHOLD = "99"                                # Free Space that must be left in bot (int value without GB/MB)
 TORRENT_DIRECT_LIMIT = ""                             # Limit the size of torrent download (int value without GB/MB)
 ZIP_UNZIP_LIMIT = ""                                  # Limit the size of Zip/Unzip (int value without GB/MB)
 CLONE_LIMIT = ""                                      # Limit the size of Clone (int value without GB/MB)
@@ -173,8 +166,8 @@ IMDB_TEMPLATE = "<b>Title: </b> {title} [{year}]\n<b>Also Known As:</b> {aka}\n<
 # DIFFERENT BOT BUTTONS 
 SAVE_MSG = ""
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
-SOURCE_LINK = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
 START_BTN2_NAME = ""
