--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = "mongodb+srv://samaypatel19:<password>@sam.yd8dmnf.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://samaypatel19:sam@sam.g2wtfvk.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001227084967"
 SUDO_USERS = "1838706377"
 IGNORE_PENDING_REQUESTS = "True"
